# ProjectEngine-Cpp

./: CMakeLists.txt
res/shaders/: lines_frag.glsl  lines_vert.glsl  main_frag.glsl  main_vert.glsl
res/textures/: desktop.ini
src/: main.cpp
src/graphic/batch/: Batch.h  LineBatch.cpp  LineBatch.h  MeshBatch.cpp  MeshBatch.h
src/graphic/buffer/: VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/graphic/mesh/: Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
src/graphic/shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.inl
src/graphic/texture/: Image.cpp  Image.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h
src/manager/: manager.hpp
src/manager/resource/: ResourceManager.cpp  ResourceManager.h
src/manager/shader/: ShaderManager.cpp  ShaderManager.h
src/manager/texture/: TextureManager.cpp  TextureManager.h
src/object/: AdvancedObject.cpp  AdvancedObject.h  BaseObject.h  Object.cpp  Object.h  SimpleObject.cpp  SimpleObject.h
src/object/camera/: Camera.cpp  Camera.h
src/system/: system.hpp
src/system/console/: Console.cpp  Console.h
src/system/event/: Event.cpp  Event.h
src/system/window/: Window.cpp  Window.h
src/world/chunk/: Chunk.cpp  Chunk.h  ChunkController.cpp  ChunkController.h
src/world/voxel/: Voxel.hpp
